# eebook-portfolio

./: .secrets.baseline  404.html  README.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  package-lock.json  package.json  pyproject.toml  setup.py  sitemap.xml
CHANGELOG/: index.html
LICENCE/: index.html
api/python/adapters/factory/: index.html
api/python/adapters/interfaces/: index.html
api/python/adapters/orm/: index.html
api/python/adapters/repository/: index.html
api/python/adapters/vault_client/: index.html
api/python/bootstrap/: index.html
api/python/config/loader/: index.html
api/rest/: index.html
architecture/components/: index.html
docs/api/python/: bootstrap.md
faq/: index.html
faq/coding_guidelines/: index.html
faq/contributing/: index.html
faq/git_commits/: index.html
faq/testing/: index.html
search/: search_index.json
site/: index.html  sitemap.xml
site/LICENCE/: index.html
site/api/rest/: index.html
site/faq/: index.html
site/faq/coding_guidelines/: index.html
site/faq/git_commits/: index.html
site/search/: search_index.json
site/troubleshooting/start/: index.html
src/: bootstrap.py
src/adapters/: factory.py  interfaces.py  orm.py  repository.py
src/config/: loader.py  settings.py
src/domain/: domain.py  enums.py  exceptions.py
src/entity/: models.py
src/entrypoints/: fastapi_app.py
src/entrypoints/api/: endpoints.py
src/infrastructure/database/: engine.py
src/service_layer/: dependencies.py  exceptions.py  portfolio_service.py  uow.py  users_service.py
tests/: conftest.py
tests/unit/: test_domain.py  test_uow.py  test_vault.py
(+39 files in other folders)
