[project]
name = "eebook-portfolio"
version = "0.1.0"
description = "microservice for working with user assets (portfolios) in the eebook project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.1",
    "asyncpg>=0.30.0",
    "fastapi[standart]>=0.120.0",
    "httpx>=0.28.1",
    "hvac>=2.3.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.11.0",
    "setuptools>=80.9.0",
    "sqlalchemy>=2.0.44",
    "tenacity>=9.1.2",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "bandit>=1.8.6",
    "detect-secrets>=1.5.0",
    "freezegun>=1.5.5",
    "graphviz>=0.21",
    "mkdocs>=1.6.1",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "mkdocstrings[python]>=0.30.1",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pylint>=4.0.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.2",
    "types-hvac>=2.3.0.20250914",
    "types-setuptools>=80.9.0.20250822",
]

[tool.ruff]
exclude = [
    "*/migrations/*",
    "venv/",
    "__init__.py",
    "apps.py",
    "tests/*"
]
line-length = 100
indent-width = 4

[tool.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E", "W", "C", "F", "N", "COM", "I", "U", "N", "A", "M", "B", "D"]
ignore = ["F405", "W293", "D100", "D104", "D103", "D102", "D101", "D106", "D107", "D105", "B008"]
fixable = ["ALL"]
unfixable = []

[tool.bandit]
exclude = ["tests/"]

[tool.pytest]
asyncio_mode = "strict"
